# hft-rs

./: .gitignore  Cargo.toml  README.md
crates/bins/: Cargo.toml  poc_binance.rs
crates/bins/src/: poc_binance.rs  poc_hyperliquid.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: lib.rs
crates/exec_hyperliquid/: Cargo.toml
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/replay_binance/: Cargo.toml
crates/replay_binance/src/: book.rs  capture.rs  main.rs
crates/spsc/: Cargo.toml
crates/spsc/src/: lib.rs
crates/ws_binance/: Cargo.toml
crates/ws_binance/src/: lib.rs
crates/ws_hyperliquid/: Cargo.toml
crates/ws_hyperliquid/src/: lib.rs
xtask/src/: main.rs
