[package]
name = "ws_binance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
url = "2"
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
rustls = "0.23"
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
simd-json = "0.13"
arrayvec = "0.7"
ahash = "0.8"
hdrhistogram = "7"
lexical-core = "0.8"
serde = { version = "1", features = ["derive"] }
engine_core = { path = "../engine_core" }